# ai-learning

./: .gitignore  README.md
agent/chatbot/: .env  backend.py
agentic_frameworks/chatbot/: ai_agent.py  requirements.txt
agentic_frameworks/sql_agent/: drizzle.config.ts  package.json  pnpm-lock.yaml
agentic_frameworks/sql_agent/src/app/api/chat/: route.ts
chatwithlangchain/: start.ipynb
crewai/trip_planner_agent/: .gitignore  city_report.md  frontend.py  guide_report.md  requirements.txt  travelAgents.py  travelTaks.py  travelTasks.py  travelTools.py  travel_plan.md
langgraph-end-to-end/course/chatbot/: basic_chatbot.ipynb
langgraph-end-to-end/course/conditional_workflow/: quadtratic_workflow.ipynb
langgraph-end-to-end/course/iterative_workflow/: x_post_genrator.ipynb
langgraph-end-to-end/course/sequential-workflos/: simple_workflow.ipynb
langgraph-end-to-end/prerequist-langgraph/: assisand_rag_lcel.ipynb
mcp/fastmcp-demo/: main.py  pyproject.toml
mcp/mcp_journlist/: .gitignore  backend.py  frontend.py  models.py  news_scraper.py  requirements.txt  utils.py
ml_fastapi_insaurance_predictor/: .gitignore  Dockerfile  app.py
ml_fastapi_insaurance_predictor/schema/: predication_response.py  user_input.py
projects/livecam-ai-assitant/: .gitignore  ai_agent.py  main.py  pyproject.toml  speech_to_text.py  text_to_speech.py  tools.py
